# cloudbeat

./: .cloudbeat-test.config.json  .dockerignore  .editorconfig  .gitignore  .go-version  .golangci.yaml  .mergify.yml  .mockery.yaml  .pre-commit-config.yaml  Dockerfile  Dockerfile.debug  JUSTFILE  Jenkinsfile  LICENSE.txt  Makefile  NOTICE.txt  README.md  README_GHSA_ASSESSMENT.md  RULES.md  SECURITY_ASSESSMENT_GHSA-gwrf-jf3h-w649.md  VULNERABILITY_MITIGATION_SUMMARY.md  catalog-info.yaml  cloudbeat-test  cloudbeat.reference.yaml  cloudbeat.reference.yml  cloudbeat.yaml  cloudbeat.yml  cloudbeat_minikube.yaml.patch  cloudbeat_pr_body  data.yaml  diffs.md  go.mod  go.sum  hermit_pr_body  justfile  logs.ndjson  magefile.go  main.go  main.rego  main_test.go  (+7 more)
deploy/test-environments/fleet_api/: README.md  pylintrc  pyproject.toml
security-policies/: .gitignore  .mergify.yml  README.md  RULES.md  pyproject.toml
security-policies/.github/ISSUE_TEMPLATE/: bug_report.md  issue_template.md
security-policies/.github/workflows/: test-coverage.yml  test-policies.yml
security-policies/.regal/: config.yaml
security-policies/bundle/compliance/: main.rego
security-policies/dev/: README.md  common.py  generate_rule_metadata.py  generate_rule_templates.py  update_rule_status.py
security-policies/dev/input/: CIS_Amazon_Elastic_Kubernetes_Service_(EKS)_Benchmark_v1.0.1.xlsx  CIS_Amazon_Web_Services_Foundations_Benchmark_v1.5.0.xlsx  CIS_Google_Cloud_Platform_Foundation_Benchmark_v2.0.0.xlsx  CIS_Microsoft_Azure_Foundations_Benchmark_v2.0.0.xlsx
tests/: Dockerfile  README.md  agent_param.py  agents_map.py  configuration.py  conftest.py  deploy.yaml  pylintrc  pyproject.toml  pytest.ini  setup.cfg
tests/ci_test_env/: .env  docker-compose.yaml  docker-compose.yml
tests/commonlib/: agents_map.py  docker_wrapper.py  elastic_wrapper.py  fleet_api.py  io_utils.py  kubernetes.py  utils.py
tests/commonlib/framework/: reporting.py
tests/deploy/: cloudbeat-eks-pytest.yaml  cloudbeat-pytest.yaml  cloudbeat-pytest.yml  eks-psp-failures-pod.yaml  eks-psp-pass-pod.yaml  eks-results.yml  mock-pod.yml  sa-agent-pytest.yml
tests/deploy/k8s-cloudbeat-tests/: k8s-values.yaml  requirements.yaml  values.yaml
tests/deploy/values/: ci-aws-services.yml  ci-eks-config-1-test-acc.yml  ci-eks-config-1.yml  ci-eks-config-2-test-acc.yml  ci-eks-config-2.yml  ci-eks.yml  ci-sa-agent.yml  ci.yml  local-host.yml
tests/elasticsearch/: cnvm_client.py  cspm_client.py  kspm_client.py
tests/fleet_api/: agent_policy_api.py  base_call_api.py  common_api.py  data_view_api.py  endpoint_package_policy.py  entity_store_api.py  kibana_settings.py  managed_integration_api.py  package_policy_api.py  utils.py
tests/integration/tests/: conftest.py  test_cloudbeat_integration.py  test_output_to_elasticsearch.py  test_sanity_checks.py  test_sanity_telemetry.py  test_standalone_agent_integration.py
tests/integrations_setup/: README.md  agents_enrolled.py  cdr_wiz_fleet_helpers.py  configuration_fleet.py  cspm-linux.sh  enable_entity_store.py  enable_entity_store_v2.py  enroll_elastic_defend_winrm.py  install_agentless_agent_integration.py  install_agentless_integrations.py  install_asset_inventory_integration.py  install_aws_asset_inventory_integration.py  install_az_activity_logs_integration.py  install_azure_asset_inventory_integration.py  install_cloudtrail_integration.py  install_cnvm_integration.py  install_cspm_azure_integration.py  install_cspm_gcp_integration.py  install_cspm_integration.py  install_d4c_integration.py  install_elastic_defend_integration.py  install_entityanalytics_okta_integration.py  install_gcp_asset_inventory_integration.py  install_gcp_audit_logs_integration.py  install_kspm_eks_integration.py  install_kspm_unmanaged_integration.py  install_okta_integration.py  install_wiz_integration.py  package_policy.py  purge_integrations.py  state_data.json  state_file_manager.py  upgrade_agents.py
tests/integrations_setup/data/: agent-policy-d4c.json  agent-policy-elastic-defend.json  az-activity-logs-pkg.json  cloudtrail-pkg.json  cspm-linux.j2  elastic-defend-linux.j2  elastic-defend-windows.j2  entityanalytics_okta-pkg.json  gcp-audit-logs-pkg.json  okta-pkg.json  package-policy-d4c.json  package-policy-elastic-defend.json  wiz-pkg.json
tests/product/tests/: conftest.py  kube_rules.py  kube_test_case.py  parameters.py  test_aws_asset_inventory.py  test_aws_ec2_asset_inventory.py  test_aws_ec2_rules.py  test_aws_iam_management_rules.py  test_aws_logging_rules.py  test_aws_monitoring_rules.py  test_aws_rds_rules.py  test_aws_s3_service_rules.py  test_aws_vpc_rules.py  test_azure_app_service_rules.py  test_azure_asset_inventory.py  test_azure_database_service_rules.py  test_azure_identity_access_management_rules.py  test_azure_key_vault_rules.py  test_azure_logging_and_monitoring_rules.py  test_azure_microsoft_defender_rules.py  test_azure_networking_rules.py  test_azure_storage_account_rules.py  test_azure_virtual_machine_rules.py  test_cloudbeat.py  test_eks_aws_managed_services_rules.py  test_eks_file_sys_rules.py  test_eks_file_system_rules.py  test_eks_k8s_objects_rules.py  test_eks_managed_services_rules.py  test_eks_process_kubelet_rules.py  test_file_system_rules.py  test_gcp_asset_inventory.py  test_k8s_file_system_rules.py  test_k8s_object_rules.py  test_k8s_objects_rules.py  test_k8s_process_rules.py  test_kube_api_rules.py  test_process_api_server_rules.py  test_process_controller_manager_rules.py  test_process_etcd_rules.py  (+3 more)
tests/product/tests/data/: azure_test_case.py  (+4 more)
tests/test_environments/: eks-base-pod.yaml  k8s-objects-all-cases.yml  mock-pod.yml  pvc-deleter.yaml  sa-agent-pytest.yml
tests/test_environments/agents/: elastic-agent-8-13.yml  elastic-agent-standalone.yml
tests/test_environments/k8s-cloudbeat-tests/: Chart.yaml  values.yaml
tests/test_environments/values/: ci-aws-services.yml  ci-eks-config-1.yml  ci-eks-config-2.yml  ci-sa-agent.yml  ci-test-k8s-files.yml  ci-test-k8s-objects.yml  ci-test-k8s-proc-conf1.yml  ci-test-k8s-proc-conf2.yml  local-host.yml
(+4353 files in other folders)
