[tool.poetry]
name = "cloudbeat"
version = "0.1.0"
description = "Cloudbeat poetry project"
authors = ["cloudbeat <cloudbeat-team@elastic.co>"]
packages = [
    { include = "fleet_api", from = "tests" }
]

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.4"
munch = "4.0.0"
loguru = "0.7.2"
ruamel-yaml = "^0.18.5"
jinja2 = "^3.1.3"

[tool.poetry.group.security-policies.dependencies]
pandas = "^1.5.2"
GitPython = "^3.1.41"
openpyxl = "^3.0.10"
tabulate = "^0.9.0"
numpy = "^1.23.5"
regex = "^2022.10.31"
PyYAML = "^6.0"
allure-python-commons = "^2.13.2"

[tool.poetry.group.tests.dependencies]
kubernetes = "^23.3.0"
elasticsearch = "^8.10.0"
allure-pytest = "^2.9.45"
pytest-xdist = "^2.5.0"
docker = "^6.0.0"
pytest-order = "^1.0.1"
pytest-dependency = "^0.5.1"
pylint = "^2.14.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--tb=line -rA --no-header -p no:warnings -s -v --alluredir=tests/allure/results --clean-alluredir"
markers = [
    # tests used in cloudbeat CI
    "pre_merge",
    "pre_merge_agent",
    "sanity",
    # test target markers
    "file_system_rules",
    "k8s_object_rules",
    "process_api_server_rules",
    "process_controller_manager_rules",
    "process_etcd_rules",
    "process_api_server_rules",
    "process_scheduler_rules",
    "process_kubelet_rules",
    "eks_file_system_rules",
    "eks_process_rules",
    "eks_k8s_objects_rules",
    "eks_service_rules",
    "aws_s3_service_rules",
    "aws_iam_rules",
    "aws_logging_rules",
    "aws_ec2_rules",
    "aws_rds_rules",
    "aws_vpc_rules",
    "aws_monitoring_rules",
    "azure_app_service_rules",
    "azure_database_service_rules",
    "azure_identity_access_management_rules",
    "azure_key_vault_rules",
    "azure_logging_and_monitoring_rules",
    "azure_networking_rules",
    "azure_storage_account_rules",
    "azure_virtual_machine_rules",
]
