[project]
name = "security-policies"
version = "0.1.0"
description = ""
authors = [
    {name ="oren zohar", email = "oren.zohar@elastic.co"}
]
requires-python = ">=3.11"
dependencies = [
    "pandas >= 1.5.2",
    "GitPython >= 3.1.41",
    "openpyxl >= 3.0.10",
    "tabulate >= 0.9.0",
    "numpy >= 1.23.5",
    "Jinja2 >= 3.1.4",
    "regex >= 2022.10.31",
    "ruamel.yaml >= 0.17.21",
    "PyYAML >= 6.0",
    "pytest >= 7.4.4",
    "allure-python-commons >= 2.13.2",
    "munch >= 4.0.0",
    "loguru >= 0.7.2",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
