[tool.poetry]
name = "tests"
version = "0.1.0"
description = "Test project for cloudbeat agent"
authors = ["Dmitry Gurevich <dmitry.gurevich@elastic.co>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.1"
munch = "^2.5.0"
kubernetes = "^23.3.0"
elasticsearch = "^8.1.0"
allure-pytest = "^2.9.45"
pytest-xdist = "^2.5.0"
docker = "^6.0.0"
pytest-order = "^1.0.1"
pytest-dependency = "^0.5.1"
pylint = "^2.14.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:warnings -s -v --alluredir=tests/allure/results --clean-alluredir"
markers = [
    # tests used in cloudbeat CI
    "pre_merge",
    "post_merge_agent",
    # test target markers
    "file_system_rules",
    "k8s_object_rules",
    "process_api_server_rules",
    "process_controller_manager_rules",
    "process_etcd_rules",
    "process_api_server_rules",
    "process_scheduler_rules",
    "process_kubelet_rules",
    "eks_file_system_rules",
    "eks_process_rules"
]
