[tool.poetry]
name = "tests"
version = "0.1.0"
description = "Test project for cloudbeat agent"
authors = ["Dmitry Gurevich <dmitry.gurevich@elastic.co>"]
packages = [
    {include="fleet_api"}
]


[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.1"
munch = "3"
kubernetes = "^23.3.0"
elasticsearch = "^8.1.0"
allure-pytest = "^2.9.45"
pytest-xdist = "^2.5.0"
docker = "^6.0.0"
pytest-order = "^1.0.1"
pytest-dependency = "^0.5.1"
pylint = "^2.14.2"
loguru = "0.7.0"
requests = "^2.31.0"
ruamel-yaml = "^0.18.5"
jinja2 = "^3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--tb=line -rA --no-header -p no:warnings -s -v --alluredir=tests/allure/results --clean-alluredir"
markers = [
    # tests used in cloudbeat CI
    "pre_merge",
    "pre_merge_agent",
    "sanity",
    # test target markers
    "k8s_file_system_rules",
    "k8s_object_psp_rules",
    "k8s_process_rules",
    "eks_file_system_rules",
    "eks_process_rules",
    "eks_k8s_objects_rules",
    "eks_service_rules",
    "aws_s3_service_rules",
    "aws_iam_rules",
    "aws_logging_rules",
    "aws_ec2_rules",
    "aws_rds_rules",
    "aws_vpc_rules",
    "aws_monitoring_rules",
    "azure_app_service_rules",
    "azure_database_service_rules",
    "azure_identity_access_management_rules",
    "azure_key_vault_rules",
    "azure_logging_and_monitoring_rules",
    "azure_networking_rules",
    "azure_storage_account_rules",
    "azure_virtual_machine_rules",
    "azure_microsoft_defender_rules",
    "asset_inventory",
    "aws_asset_inventory",
]
