[tool.poetry]
name = "fleet-api"
version = "0.1.0"
description = ""
authors = ["Dmitry Gurevich <dmitry.gurevich@elastic.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
munch = "^3.0.0"
loguru = "^0.7.0"
jinja2 = "^3.1.2"
ruamel-yaml = "^0.17.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
