[tool.poetry]
name = "fleet-api"
version = "0.1.0"
description = ""
authors = ["Dmitry Gurevich <dmitry.gurevich@elastic.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
munch = "^3.0.0"
loguru = "^0.7.0"
jinja2 = "^3.1.2"
ruamel-yaml = "^0.17.31"
packaging = "^23.1"
boto3 = "^1.28.65"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
